manifests/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: qiitawrapper
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: "qiitawrapper-api-frontendconfig"
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: "qiitawrapper-api-external-ip"
    ingress.gcp.kubernetes.io/pre-shared-cert: "qiitawrapper-api-managed-cert" # use managed cert created by Terraform
    # networking.gke.io/managed-certificates: "qiitawrapper-api-managed-cert" # use managed cert created by Kubernetes Manifests
  labels:
    app: qiitawrapper
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: qiitawrapper-backend
              servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: qiitawrapper-backend
  labels:
    app: qiitawrapper
  annotations:
    cloud.google.com/backend-config: '{"ports": {"80":"qiitawrapper-api-backendconfig"}}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: qiitawrapper
    tier: api
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8090
